Hotfix: updating .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 /proyecto_dam/nbproject
 /nbproject
+
+/proyecto_dam/design/testfiles
+/design/testfiles
+
+/proyecto_dam/design/cuentas.txt
+/design/cuentas.txt
